--- a/event.html
+++ b/event.html
@@ -139,7 +139,7 @@
         <div class="row mt-5 event_content active">
         
             <div class="event-img col-lg-5 col-sm-12 ">
-                <img src="/img/Lohana.jpg" alt="" width="100%" height="">
+                <img src="img/Lohana.jpg" alt="" width="100%" height="">
 
             </div>
             <div class="col-lg-7 col-sm-12 ">
@@ -203,7 +203,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="imtof">
-                    <img  src="/img/imtof.jpg" alt="" width="100%">
+                    <img  src="img/imtof.jpg" alt="" width="100%">
                 </div>
                 <div>
                     <h4 class="mt-3">CONCLUSION</h4>
