--- a/Our Product/Autoplanter/about.html
+++ b/Our Product/Autoplanter/about.html
@@ -74,8 +74,7 @@ License URI: http://www.themevault.net/license/-->
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <div id="bg-img" style="background-image: url('images/Pink\ Oyster\ Mushrooms\ Grow!.png')">
 
-                            <p class="desc-text text-center" id="head">
-                                Automate Your Mushroom Farming Journey:</p>
+                            <p class="desc-text " id="head">Automate Your Mushroom Farming Journey:</p>
 
                             <p class="desc-text text-justify opacity ">
                                 <span>Smart Planting Technology:</span>
