--- a/Our Product/Autoplanter/contact.html
+++ b/Our Product/Autoplanter/contact.html
@@ -97,8 +97,8 @@ License URI: http://www.themevault.net/license/-->
                         <div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-12 width-set-40">
                             <h1 class="maintitle"><span><i class="fa fa-map-marker"></i> Locations</span></h1>
                             <dl>
-                                <dt>5/375, S. Kolathur, Indirapuri, Kovilambakkam.</dt>
-                                <dt>Chennai,TAMIL NADU, INDIA</dt>
+                                <dt>5/375, S. Kolathur, Indirapuri, Kovilambakkam,</dt>
+                                <dt>Chennai,Tamil Nadu, India.</dt>
 
                                 <dd><span>Telephone:</span><a href="tel:+1-202-555-0100">+91 7845542987</a></dd>
                                 <dd><span>E-mail:</span><a href="mailto:demo@info.com"> engg.suite@eebedcs.com</a></dd>
