--- a/Our Product/Hydrophonics/hydrophonics.html
+++ b/Our Product/Hydrophonics/hydrophonics.html
@@ -114,14 +114,14 @@
 					<div class="carousel-caption">
 						<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
 							Meet<span> EEBEDCS</span>!</h2>
-						<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Unleash the
+						<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Unleash the
 								Potential</span> Hydroponic Innovation .</h3>
 						<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals
 						</p>
-						<ul class="social-links text-center">
-							<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
+						<ul class="social-links text-center text-white">
+							<li><a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></li>
 							<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
-							<li><a href=""><i class="fa fa-instagram fa-lg"></i></a></li>
+							<li><a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 						<h2 data-wow-duration="500ms" data-wow-delay="500ms" class="wow bounceInDown animated">
 							Meet<span> Team</span>!</h2>
 						<h3 data-wow-duration="500ms" class="wow slideInLeft animated"><span
-								class="color">/creative</span> Hydroponic Revolution.</h3>
+								class="color">creative</span> Hydroponic Revolution.</h3>
 						<p data-wow-duration="500ms" class="wow slideInRight animated">We are a team of professionals
 						</p>
 
@@ -178,7 +178,7 @@
 
 						<div class="service-desc">
 							<h3>Optimized Growth</h3>
-							<p>Experience accelerated growth rates, increased yields, and enhanced plant vitality as
+							<p class="text-justify">Experience accelerated growth rates, increased yields, and enhanced plant vitality as
 								hydroponics provides plants with direct access to essential nutrients, oxygen, and
 								water,
 								fostering optimal growth conditions and maximizing productivity. </p>
@@ -196,7 +196,7 @@
 
 						<div class="service-desc">
 							<h3>Water Conservation</h3>
-							<p>Embrace eco-friendly cultivation practices with hydroponics. By recycling and reusing
+							<p class="text-justify">Embrace eco-friendly cultivation practices with hydroponics. By recycling and reusing
 								nutrient solutions, hydroponics significantly reduces water consumption,
 								promoting environmental sustainability and responsible resource management</p>
 						</div>
@@ -213,8 +213,7 @@
 
 						<div class="service-desc">
 							<h3>Space-Efficient Cultivation</h3>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-								laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+							<p class="text-justify">Space-efficient cultivation refers to agricultural practices and technologies designed to maximize crop yield in limited areas. This approach is particularly important in urban environments, where space is at a premium, and in regions with poor soil or harsh climates.</p>
 						</div>
 					</div>
 				</div>
@@ -265,62 +264,57 @@
 			<figure class="mix work-item branding">
 				<img src="img/img/img4.png" alt="">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img4.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img4.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers </h4>
 					<p>Wicking systems</p>
 				</figcaption>
 			</figure>
-
+			
 			<figure class="mix work-item web">
 				<img src="img/img/img6.png" alt="">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img6.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img6.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers </h4>
 					<p>Deep Water Culture</p>
 				</figcaption>
 			</figure>
-
+			
 			<figure class="mix work-item logo-design">
 				<img src="img/img/item-1.png" alt="">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/item-1.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/item-1.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers </h4>
 					<p>Nutrient Film Technique</p>
 				</figcaption>
 			</figure>
-
+			
 			<figure class="mix work-item photography">
-				<img src="img/img/img8.png" alt="">
+				<img src="img/img/img8.png" alt="" height="100%">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img8.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img8.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers </h4>
 					<p>Aeroponics</p>
 				</figcaption>
 			</figure>
-
+		
 			<figure class="mix work-item branding">
 				<img src="img/img/img9.png" alt="">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img9.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img9.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers </h4>
 					<p>Wicking systems</p>
 				</figcaption>
 			</figure>
-
+			
 			<figure class="mix work-item web">
 				<img src="img/img/img7.png" alt="">
 				<figcaption class="overlay">
-					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img7.png"><i
-							class="fa fa-eye fa-lg"></i></a>
+					<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/img/img7.png"><i class="fa fa-eye fa-lg"></i></a>
 					<h4>Smart Farming for Modern Growers m</h4>
 					<p>Deep Water Culture</p>
 				</figcaption>
 			</figure>
+			
 
 		</div>
 	</section>
@@ -384,8 +378,7 @@
 				<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms">
 					<div class="contact-address">
 						<h3>"Hydroponic Innovation is a game-changer."</h3>
-						<p>5/375, S. Kolathur, Indirapuri, Kovilambakkam</p>
-						<p>Chennai,TAMIL NADU, INDIA</p>
+						<p>5/375, S. Kolathur, Indirapuri, Kovilambakkam, Chennai, <br> Tamil Nadu,  India.</p>
 						<p>+91 7845542987</p>
 					</div>
 				</div>
@@ -423,7 +416,8 @@
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 wow fadeInRight animated" data-wow-duration="500ms"
 					data-wow-delay="600ms">
 					<ul class="footer-social">
-						<li><a href="https://www.twitter.com/"><i class="fa-brands fa-x-twitter"></i></a></li>
+						<li><a href="https://www.linkedIn.com/"><i class="fa-brands fa-linkedin-in fa-2x"></i></a></li>
+						<li><a href="https://www.twitter.com/"><i class="fa-brands fa-x-twitter fa-2x"></i></a></li>
 						<li><a href="https://www.facebook.com/"><i class="fa fa-facebook fa-2x"></i></a></li>
 					</ul>
 				</div>
@@ -452,7 +446,7 @@
 
 	<footer id="footer" class="footer">
 		<div class="container">
-			<div class="row">
+			<div class="row d-flex">
 				<div class="col-md-6 col-sm-6 col-lg-5 col-xs-12wow fadeInUp animated" data-wow-duration="500ms">
 					<div class="footer-single">
 						<img src="img/trd.png" width="50%" alt="">
@@ -462,17 +456,14 @@
 				<div class="col-md-6 col-sm-6 col-lg-5 col-xs-12 wow fadeInUp animated" data-wow-duration="500ms"
 					data-wow-delay="900ms">
 					<div class="footer-single">
-						<ul>
-							<li><a href="#">Contact Us :</a></li>
-						</ul>
-						<div class="col-lg-12 col-md-8 col-sm-8 col-xs-12" data-wow-duration="50ms">
-							<div class="">
+
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" data-wow-duration="50ms">
+							    <p><b>CONTACT US :</b></p>
 								<p>5/375, S. Kolathur, Indirapuri, Kovilambakkam</p>
 								<p>Chennai,TAMIL NADU, INDIA</p>
 								<p>+91 7845542987</p>
 								<p> <a href="#">engg.suite@eebedcs.com</a></p>
 
-							</div>
 						</div>
 					</div>
 				</div>
