--- a/Our Product/scaffolding/scaffolding.html
+++ b/Our Product/scaffolding/scaffolding.html
@@ -281,7 +281,7 @@
                     <!--Content of the Right Side-->
                     <div class="col-3">
                         <div class="section-heading">
-                            <h3>Why Choose</h3>
+                            <h3>Why Choose ?</h3>
                             <h2 class="section-title">Focusing On What Matters Most</h2>
                             <p class="section-subtitle">With years of experience in the industry, our team brings a
                                 wealth of expertise to every project. Trust us to deliver reliable electrical
@@ -355,9 +355,8 @@
 
             <!--Clients-->
             <section id="clients" class="scrollto text-center" data-enllax-ratio=".2" data-wow-delay="0.5s">
-            
-                <h3 class="text-center"> CONTACT US</h3>
                 <div class="row ">
+                    <h3 class="text-center"> CONTACT US</h3>
                     <div class="col-lg-12  col-sm-12 col-md-12">
                         <div class="section-heading ">
                             <h2 class="section-title ">Ready to elevate your electrical projects with top-notch
