--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,8 +65,8 @@
                 </div>
             </a>
             <div class="h-100 d-inline-flex align-items-center">
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div>
@@ -123,7 +123,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/Aboutbanner.jpeg);">
         <div class="container">
             <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
         </div>
@@ -141,7 +141,7 @@
         <div class="content-box">
 
             <div class="content active">
-                <p><b>Development of new technologies:</b> EB Engineering aims to develop innovative technologies that address the evolving needs of the engineering industry.</p>
+                <p><b>Development of new technologies:</b> EEB Engineering aims to develop innovative technologies that address the evolving needs of the engineering industry.</p>
 
                 <p><b>World-class products:</b> The company is dedicated to providing high-quality products that meet the standards of excellence.</p>
 
@@ -149,17 +149,17 @@
 
                 <p><b>Collaboration and expertise:</b> The company leverages its expertise and adopts a collaborative approach to solve challenges and meet the evolving demands of the industry.</p>
 
-                <p><b>Empowerment of clients and partners:</b> EEB Engineering strives to empower its clients and partners by providing cutting-edge innovations that optimise their operations and enable sustainable growth.</p>
+                <p><b>Empowerment of clients and partners:</b> EEB Engineering strives to empower its clients and partners by providing cutting-edge innovations that optimize their operations and enable sustainable growth.</p>
 
                 <p><b>Customer-centric focus:</b> The company places great importance on customer satisfaction and aims to make a lasting impact by driving digital transformation and fostering technological advancements.</p>
 
-                <p><b>Contribution to society:</b> EEB Engineering adheres to ESG goals, actively contributing to a sustainable future. We prioritise environmental sustainability by reducing carbon emissions and promoting energy efficiency. Our clay bottle innovation exemplifies our commitment to society, promoting eco-friendly practices for a greener world.</p>
+                <p><b>Contribution to society:</b> EEB Engineering adheres to ESG goals, actively contributing to a sustainable future. We prioritize environmental sustainability by reducing carbon emissions and promoting energy efficiency. Our clay bottle innovation exemplifies our commitment to society, promoting eco-friendly practices for a greener world.</p>
             </div>
 
             <div class="content">
-                <p>EEB Engineering Design and Consultancy Services Pvt. Ltd. has a clear vision of being a leader in finding smart and robust solutions for the engineering industry. The company aims to push the boundaries of innovation and technology to create a positive impact on society. Through our innovative solutions and consultancy expertise, we aim to make significant contributions to humanity, addressing pressing global issues and driving positive transformations</p>
-
+                <p>EEB Engineering Design and Consultancy Services Pvt. Ltd. has a clear vision of being a leader in finding smart and robust solutions for the engineering industry.The company aims to push the boundaries of innovation and technology to create a positive impact on society.Through our innovative solutions and consultancy expertise, we aim to make significant contributions to humanity, addressing pressing global issues and driving positive transformations</p>
                 <p>EEB Engineering envisions a future where digital transformation benefits all and contributes to building an inclusive and sustainable world. By evolving the next generation of engineering technology, EEB Engineering strives to be a benchmark in the industry and make significant contributions to humanity through its innovative solutions.</p>
+
             </div>
 
         </div>
@@ -238,12 +238,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
