--- a/hydroponics.html
+++ b/hydroponics.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,12 +68,9 @@
                     </div>
                 </a>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i
-                            class="fab fa-instagram"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i
-                            class="fa-brands fa-facebook-f"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
@@ -92,7 +89,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAbout" role="button"
                             data-bs-toggle="dropdown">
@@ -104,7 +101,7 @@
                         </ul>
                     </div>
                     <a href="produts.html" class="nav-item nav-link"> Products</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="services.html" class="nav-item nav-link active">Services</a>
                     <a href="team.html" class="nav-item nav-link">Team</a>
                     <a href="event.html" class="nav-item nav-link">Events</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -131,13 +128,13 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
         <div class="container">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">SERVICES</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
         </div>
     </div>
     <!-- Page Header End -->
     <div class="container">
         <div class="row hydrophonics">
-            <h1 class="text-center text-primary mt-5 mb-5">HYDROPHONICS CONSULTANCY SERVICES</h1>
+            <h1 class="text-center text-primary mt-5 mb-5">HYDROPHONICS CONSULTING SERVICES</h1>
             <div class="col-lg-6 col-sm-12 pt-4 pe-4">
                 <p class="text-justify lh-lg">Hydroponics or soilless farming, a sustainable farming technique achieved
                     great
@@ -221,12 +218,12 @@
 
             <div class="footerIcon">
                 <a
-                    href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                    href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
