--- a/produts.html
+++ b/produts.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,8 +65,8 @@
                     </div>
                 </a>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="prodcut-content">
-                        <h3>Amphipious Cycle</h3>
+                        <h3>Amphipious e-Cycle</h3>
                         <p>Revolutionizing traditional modes of transportation, the Amphibious Electric Cycle represents the pinnacle of innovation, seamlessly melding the versatility of an electric bicycle with the boundless exploration of aquatic realms.</p>
                     </div>
                 </a>
@@ -160,7 +160,7 @@
             <div class="prodcuts">
                 <a href="Our Product/Floatation tank/index.html" target="_blank">
                     <div class="prodcut-img">
-                        <img src="img/Float Tank.jpg" alt="">
+                        <img src="img/Flotation Tank BG.jpg" alt="">
                         <div class="middle">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </div>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="prodcut-content">
                         <h3>Hydrophonics</h3>
-                        <p>With a vision to find smart and robust solutions for the engineering industry, EEB Engineering Design and Consultancy Services Pvt. Ltd started in April 2021.</p>
+                        <p>Our vision is to find smart and robust solutions for the engineering industry, EEB Engineering Design and Consultancy Services Pvt. Ltd started in April 2021.</p>
                     </div>
                 </a>
             </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="prodcut-content">
                         <h3>Scaffolding</h3>
-                        <p>we understand the critical role that a solid support system plays in electrical work. Our commitment is to provide innovative and reliable electrical scaffolding solutions tailored to meet the unique needs of your projects.</p>
+                        <p>We understand the critical role that a solid support system plays in electrical work. Our commitment is to provide innovative and reliable electrical scaffolding solutions tailored to meet the unique needs of your projects.</p>
                     </div>
                 </a>
             </div>
@@ -232,12 +232,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
