--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,12 +68,9 @@
                     </div>
                 </a>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i
-                            class="fab fa-instagram"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i
-                            class="fa-brands fa-facebook-f"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
@@ -124,14 +121,14 @@
                     </a>
                 </div>
             </div>
-    </div>
-    </nav>
+        </div>
+        </nav>
     </div>
     <!-- Navbar End -->
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+    <div class="container-fluid page-header mb-5 py-5" id="banner" style="background-image: url(img/ServiceBanner.jpeg);">
         <div class="container">
             <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
         </div>
@@ -143,10 +140,10 @@
         <div class="row">
             <div class="service-card  text-white col-lg-6 mt-5">
                 <a href="design.html">
-                    <img src="img/design-3.jpg" class="card-img" alt="Stony Beach"/>
-                    <div class="service-content  ms-2 me-4">
-                        <h5 class="card-title ">DESIGINING CONSULTANCY SERVICES</h5>
-                        <p class="text-justify text-white">
+                    <img src="img/designing-img.jpg" class="card-img" alt="Stony Beach"/>
+                    <div class="service-content  me-4">
+                        <h5 class="card-title ">DESIGNING CONSULTING SERVICES</h5>
+                        <p class="text-justify text-white ps-2">
                             Welcome to EEB Engineering Design & Consultancy Services, your premier destination for
                             Consultancy Services. With our expertise, we bring your concepts to life with precision,
                             efficiency, and innovation.
@@ -160,10 +157,10 @@
             </div>
             <div class="service-card  text-white col-lg-6 mt-5">
                 <a href="manufacture.html">
-                    <img src="img/manufacturin-img.jpeg" class="card-img" alt="Stony Beach" width="100%" height="100%" />
-                    <div class="service-content  ms-2 me-4">
-                        <h5 class="card-title ">MANUFACTURING CONSULTANCY SERVICES</h5>
-                        <p class="text-justify text-white">
+                    <img src="img/Manufacturing-image.jpg" class="card-img" alt="Stony Beach" width="100%" height="100%" />
+                    <div class="service-content  me-4">
+                        <h5 class="card-title ">MANUFACTURING CONSULTING SERVICES</h5>
+                        <p class="text-justify text-white ps-2">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content. This content is a little bit longer.
                         </p>
@@ -175,10 +172,10 @@
             </div>
             <div class="service-card  text-white col-lg-6 mt-5">
                 <a href="prototype.html">
-                    <img src="img/prototyping.jpg" class="card-img" alt="Stony Beach" />
-                    <div class="service-content  ms-2 me-4 ">
-                        <h5 class="card-title ">PROTOTYPING CONSULTANCY SERVICES</h5>
-                        <p class="text-justify text-white">
+                    <img src="img/3D Printing-img.jpg" class="card-img" alt="Stony Beach"  height="100%"/>
+                    <div class="service-content  me-4 ">
+                        <h5 class="card-title ">3D PRINTING SERVICES</h5>
+                        <p class="text-justify text-white ps-2">
                             Revolutionizing Manufacturing with Advanced 3D Printing consultancy services. We offer
                             unparalleled expertise in delivering innovative solutions tailored to your specific needs.
                         </p>
@@ -190,10 +187,10 @@
             </div>
             <div class="service-card  text-white col-lg-6 mt-5" >
                 <a href="hydroponics.html" class="text-decoration-none">
-                    <img src="img/hydrophonics-img.jpg" class="card-img" alt="Stony Beach" />
-                    <div class="service-content ms-2 me-4 ">
-                        <h5 class="card-title ">HYDROPHONICS CONSULTANCY SERVICES</h5>
-                        <p class="text-justify  text-white ">
+                    <img src="img/Hydrophonics-image.jpg" class="card-img" alt="Stony Beach" width="100%" height="100%"/>
+                    <div class="service-content  me-4 ">
+                        <h5 class="card-title ">HYDROPHONICS CONSULTING SERVICES</h5>
+                        <p class="text-justify  text-white ps-2">
                             Hydroponics or soilless farming, a sustainable farming technique achieved great attention to
                             encounter
                             the problems and limitations of conventional soil-based farming.
@@ -221,12 +218,12 @@
 
             <div class="footerIcon">
                 <a
-                    href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                    href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
