--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,9 +67,9 @@
                 </div>
             </a>
             <div class="h-100 d-inline-flex align-items-center">
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div> 
     </div>
@@ -124,7 +124,7 @@
 
 
 <!-- Page Header Start -->
-<div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+<div class="container-fluid page-header mb-5 py-5" id="banner" style="background-image: url(img/TeamBanner.jpeg);">
     <div class="container">
         <h1 class="display-3 text-white mb-3 animated slideInDown">Team</h1>
     </div>
@@ -170,7 +170,7 @@
         </div>
         <div class="row two">
             <div class="card col-lg-6 col-md-6 col-sm-12 mt-5">
-                <a class="team-card" href="">
+                <a class="team-card" href="saavan.html">
                     <div class="card">
                         <img class="card-img-top equal-image rounded-circle" src="./img/Savan.jpg" alt="Sanjay Thakrar">
                         <div class="card-body">
@@ -208,7 +208,7 @@
                         </div>
                         <div class="team-text">
                             <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Gokulnath S</h5>
+                                <h5 class="fw-bold mb-0">Gokulnath Sridhar</h5>
                             </div>
                             <div class="bg-primary text-light">
                                 <small>Designation</small>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="team-text">
                             <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Shivakumar Prakash</h5>
+                                <h5 class="fw-bold mb-0">Shiva Prakash Kumar</h5>
                             </div>
                             <div class="bg-primary text-light">
                                 <small>Designation</small>
@@ -252,15 +252,15 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
+                            <img class="img-fluid" src="img/Engineer Img/Gokulnath.jpeg" alt="">
                         </div>
                         <div class="team-text">
                             <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Chetan Kumar Suthar</h5>
+                                <h5 class="fw-bold mb-0">Suriyamoorthy Manivannan</h5>
                             </div>
                             <div class="bg-primary text-light">
                                 <small>Designation</small>
-                                <h4 class="text-light">Interior Designer</h4>
+                                <h4 class="text-light">Project Manager</h4>
                             </div>
                         </div>
                     </div>
@@ -268,79 +268,15 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
+                            <img class="img-fluid" src="img/Engineer Img/Mohan R A.jpg" alt="">
                         </div>
                         <div class="team-text">
                             <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Harri Ram R S</h5>
+                                <h5 class="fw-bold mb-0">ManiKandan M P</h5>
                             </div>
                             <div class="bg-primary text-light">
                                 <small>Designation</small>
                                 <h4 class="text-light">3D Printing Engineer</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
-                        </div>
-                        <div class="team-text">
-                            <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Manikandan M P</h5>
-                            </div>
-                            <div class="bg-primary text-light">
-                                <small>Designation</small>
-                                <h4 class="text-light">Product Engineer</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
-                        </div>
-                        <div class="team-text">
-                            <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Nishanth M P</h5>
-                            </div>
-                            <div class="bg-primary text-light">
-                                <small>Designation</small>
-                                <h4 class="text-light">Senior Mechatronics Engineer</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
-                        </div>
-                        <div class="team-text">
-                            <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Surya R</h5>
-                            </div>
-                            <div class="bg-primary text-light">
-                                <small>Designation</small>
-                                <h4 class="text-light">Production Engineer</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="" alt="">
-                        </div>
-                        <div class="team-text">
-                            <div class="bg-light">
-                                <h5 class="fw-bold mb-0">Mohan R A</h5>
-                            </div>
-                            <div class="bg-primary text-light">
-                                <small>Designation</small>
-                                <h4 class="text-light">Research & Development Engineer</h4>
                             </div>
                         </div>
                     </div>
@@ -365,12 +301,12 @@
         </div>
 
         <div class="footerIcon">
-            <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+            <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                 <div class="twitter">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </div>
             </a>
-            <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+            <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                 <div class="insta">
                     <i class="fa-brands fa-instagram"></i>
                 </div>
