--- a/uma.html
+++ b/uma.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,9 +65,9 @@
                 </div>
             </a>
             <div class="h-100 d-inline-flex align-items-center">
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+    <div class="container-fluid page-header mb-5 py-5" id="banner" style="background-image: url(img/TeamBanner.jpeg);">
         <div class="container">
             <h1 class="display-3 text-white mb-3 animated slideInDown">Team</h1>
         </div>
@@ -139,6 +139,14 @@
             <div class=" member-content col-sm-12 col-lg-8 col-md-6 ">
                 <h2 class="text-center mt-3 pt-4  title">UMA JAGADEESAN</h2>
                 <h5 class="text-center  cotitle pb-2">Head Of Operations & Strategy</h5>
+                <div class="connect text-center">
+                    <a href="https://www.linkedin.com/in/sivakumari-uma-jagadeesan-b2542417?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-icon ms-2 text-" style="font-size: 25px;">
+                        <i class="fab fa-linkedin" style="color: #0077B5;"></i>
+                    </a>
+                    <!-- <a href="https://www.instagram.com/your-instagram-profile" target="_blank" class="instagram-icon ms-2" style="font-size: 25px;">
+                        <i class="fab fa-instagram" style="color: #e1306c;"></i>
+                    </a>  -->
+                </div>
                 <p class="member-inner-content  ">
                     <p class="ms-3 me-3 para text-justify">Uma, a seasoned and highly experienced Banking Professional with over 27 years of experience in the industry. She joined Euro Exim Bank in April 2022. Her specialization is in on Large Scale Transformation and Change Management Programmes, Business Process Management, Data Analytics and Information systems, Outsourcing, Offshoring, and the Creation of Centres of Excellence. With a diverse background in progressive leadership roles, Uma has excelled in Client Lifecycle Management, New Setups, Mergers and Acquisitions, Transition, Re-engineering, and Shared Services & Global Capability Centres. She has successfully Strategized and led cross-functional teams to drive change and transformation in Strategy and operations Best Practices.</p>
                     <p class="ms-3 me-3 para text-justify">Her career spans Banking and Management Consulting globally. She has been with Standard Chartered Bank for ~20 years in Regional and Global Roles based out of India, Dubai & Singapore. Her last role was Global Head of Client Onboarding and Lifecycle Management for Corporate, Institutional, and Commercial Banking at SCB based in Singapore. Her Consulting career spans around ~ 5 years in Financial Services and FINTECH domains across geographies.</p>
@@ -165,12 +173,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
