--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,8 +65,8 @@
                     </div>
                 </a>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
@@ -133,17 +133,9 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Get In Touch</h6>
-                    <h1 class="mb-4">Contact For Any Query</h1>
-                    <p class="mb-4 text-justify">Thank you for your interest in EEB Engineering Design and Consultancy Services Pvt. Ltd. If you have any inquiries, partnership proposals, or would simply like to learn more about our innovative solutions and services.</p>
-                        <iframe class="position-relative w-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.4590402732165!2d80.19059367572291!3d12.942451915515331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d69c8bb930b%3A0xebde4ae0e53760cd!2sEEB%20Engineering%20Design%20and%20Consultancy%20Services%20(EEBEDCS)!5e0!3m2!1sen!2sin!4v1704517926528!5m2!1sen!2sin" 
-                            frameborder="0" style="height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
-                            tabindex="0"></iframe>
-                </div>
-                <div class="col-md-6 wow fadeInUp lap-contact" data-wow-delay="0.1s">
-                    <div class="bg-light p-5 h-100 d-flex align-items-center">
+                <div class=" mb-4 col-md-6 wow fadeInUp lap-contact" data-wow-delay="0.1s">
+                    <h1>Get In Touch</h1>
+                    <div class=" mt-2 bg-light p-5 h-100 d-flex align-items-center">
                         <form action="https://api.web3forms.com/submit" method="POST" id="form" autocomplete="off">
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -188,6 +180,14 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h1>Visit Us</h1>
+                        <iframe class="position-relative w-100"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.4590402732165!2d80.19059367572291!3d12.942451915515331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525d69c8bb930b%3A0xebde4ae0e53760cd!2sEEB%20Engineering%20Design%20and%20Consultancy%20Services%20(EEBEDCS)!5e0!3m2!1sen!2sin!4v1704517926528!5m2!1sen!2sin" 
+                            frameborder="0" style="height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
+                            tabindex="0"></iframe>
+                </div>
+                
             </div>
             </div>
         </div>
@@ -206,12 +206,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
