--- a/jatin.html
+++ b/jatin.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,8 +65,8 @@
                 </div>
             </a>
             <div class="h-100 d-inline-flex align-items-center">
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div>
@@ -125,9 +125,9 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+    <div class="container-fluid page-header mb-5 py-5" id="banner" style="background-image: url(img/TeamBanner.jpeg);">
         <div class="container">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Team</h1>
         </div>
     </div>
     <!-- Page Header End -->
@@ -142,6 +142,14 @@
             <div class=" member-content col-sm-12 col-lg-8 col-md-6">
                 <h2 class="text-center mt-3 pt-4  title">JATIN SHARMA</h2>
                 <h5 class="text-center pb-2 cotitle">Marketing & Sales Head</h5>
+                <div class="connect text-center">
+                    <a href="https://www.linkedin.com/in/followdreams?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-icon ms-2 text-" style="font-size: 25px;">
+                        <i class="fab fa-linkedin" style="color: #0077B5;"></i>
+                    </a>
+                    <!-- <a href="https://www.instagram.com/your-instagram-profile" target="_blank" class="instagram-icon ms-2" style="font-size: 25px;">
+                        <i class="fab fa-instagram" style="color: #e1306c;"></i>
+                    </a>  -->
+                </div>
                 <p class="member-inner-content  ">
                     <p class="ms-3 me-3 para text-justify">Jatin is a seasoned business professional with a robust 16-year track record in global business strategies, consulting, project management, sales, marketing, and advertising. Currently at the helm of global operations, he leads initiatives in sales, marketing, branding, business development, and strategic partnerships across a wide spectrum of industries, including Media, Advertising, Events, Manufacturing, Sourcing, Textiles, FMCG, IT - SaaS, and EdTech.</p>
                     <p class="ms-3 me-3 para text-justify">His success is underlined by his effectiveness as a team player, collaborating seamlessly with diverse cross-functional teams. Jatin has a keen entrepreneurial spirit, driving initiatives that contribute to the overall growth and success of the organizations he's been a part of.</p>
@@ -168,12 +176,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
