--- a/prototype.html
+++ b/prototype.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,8 +66,8 @@
                     </div>
                 </a>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
                     <div class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAbout" role="button" data-bs-toggle="dropdown">
                             About Us
@@ -99,7 +99,7 @@
                         </ul>
                     </div>
                     <a href="produts.html" class="nav-item nav-link"> Products</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="services.html" class="nav-item nav-link active">Services</a>
                     <a href="team.html" class="nav-item nav-link">Team</a>
                     <a href="event.html" class="nav-item nav-link">Events</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -125,15 +125,15 @@
        <!-- Page Header Start -->
        <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
         <div class="container">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
         </div>
     </div>
     <!-- Page Header End -->
 
     <div class="container">
         <div class="row hydrophonics">
-            <h1 class="text-center text-primary mt-5 mb-5">PROTOTYPING CONSULTANCY SERVICES (3D Printing)</h1>
-            <div class="col-lg-6 col-sm-12 pt-4 pe-4 para lh-lg">
+            <h1 class="text-center text-primary mt-5 mb-5">3D PRINTING SERVICES </h1>
+            <div class="col-lg-6 col-sm-12 pt-4 pe-4 para-1 lh-lg">
                 <p class="text-justify ">Our consultancy provides 3D printing and design services using the latest technology and technological prowess to meet the diverse needs of customers in various industries. At the heart of our services are state-of-the-art 3D printers, carefully selected to ensure quality, precision and versatility. From FDM to SLA, each machine in our arsenal has unique capabilities suited to a variety of applications. Our facilities use a variety of materials to ensure they meet the most demanding needs of the project. Additionally, our post-processing capabilities, including polishing, painting and assembly, allow us to deliver finished products that exceed expectations in beauty and functionality. 
                     <br>
                 </p>
@@ -142,12 +142,12 @@
                 <img src="img/prototyping.jpg" alt="" width="100%" height="100%">
             </div>
             <div class="col-lg-6 col-sm-12 mt-4 mb-3">
-                <p class="text-justify para lh-lg">Ability to meet the needs of different customers in various industries. Whether automotive, aerospace, materials, medical or other, our expertise covers all sectors. We are aware that each sector has its own unique challenges and opportunities, and we shape our approach accordingly. Our team of experts has experience and expertise in every field, allowing us to deliver unique solutions that meet specific business needs and requirements. 
+                <p class="text-justify para-1 lh-lg">Ability to meet the needs of different customers in various industries. Whether automotive, aerospace, materials, medical or other, our expertise covers all sectors. We are aware that each sector has its own unique challenges and opportunities, and we shape our approach accordingly. Our team of experts has experience and expertise in every field, allowing us to deliver unique solutions that meet specific business needs and requirements. 
                     <br>
                     We focus on unlocking the potential of 3D printing in a variety of applications, from rapid prototyping to manufacturing and end use.
                 </p>
             </div>
-            <div class="col-lg-6 col-sm-12 mt-4 mb-3 para lh-lg">
+            <div class="col-lg-6 col-sm-12 mt-4 mb-3 para-1 lh-lg">
                 <p class="text-justify">
                     Consider transparency and communication throughout the process. Our consultation process begins with an initial meeting to understand the client's goals, limitations, and scope of the project. We delve into the complexity of projects and ask probing questions to uncover challenges and opportunities. With this understanding, we initiate the concept and strategy development phase, where creativity and innovation are at the forefront. Leveraging our deep knowledge and expertise, we work with our customers to develop ideas, retool designs and explore new opportunities. Helpful information and advice every step of the way.
                 </p>
@@ -155,7 +155,7 @@
             <div class="hydro col-lg-6 col-sm-12 p-2">
                 <img src="img/abt3.jpg" alt="" width="100%" height="100%">
             </div>
-            <div class="col-lg-6 col-sm-12 mt-3 ps-4 para">
+            <div class="col-lg-6 col-sm-12 mt-3 ps-4 para-1">
                 <p class="text-justify lh-lg">
                     Our goal is to not only meet but exceed our customers' expectations, providing solutions that both sound good and do business. We are aware that every project is unique and we approach it with the care and dedication it deserves. Whether it's a small model or a large project, we approach every project with the same level of professionalism and commitment to excellence.
                     <br>
@@ -178,12 +178,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
