--- a/sanjay.html
+++ b/sanjay.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/Favicon.png" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,9 +65,9 @@
                 </div>
             </a>
             <div class="h-100 d-inline-flex align-items-center">
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href=""><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="btn btn-sm-square bg-white text-primary me-1 social-icon linked" href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon igram" href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1 social-icon faceb" href=""><i class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div>
     </div>
@@ -122,7 +122,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5" style="background-image: url(img/aboutUs.jpeg);">
+    <div class="container-fluid page-header mb-5 py-5" id="banner" style="background-image: url(img/TeamBanner.jpeg);">
         <div class="container">
             <h1 class="display-3 text-white mb-3 animated slideInDown">Team</h1>
         </div>
@@ -138,8 +138,20 @@
                     <img src="/img/sanjay.png" alt="" width="100%" height="100%">
                 </div>
                 <div class=" member-content col-sm-12 col-lg-8 col-md-6">
-                    <h2 class="text-center mt-3 pt-4  title">Dr.SANJAY THAKRAR</h2>
-                    <h5 class="text-center  cotitle pb-2">Founder & Chairman</h5>
+                    <h2 class="text-center mt-3 pt-4  title">
+                        Dr.SANJAY THAKRAR
+                    </h2>
+                    <h5 class=" pb-2 cotitle ">Founder & Chairman </h5>
+                    <div class="connect text-center">
+                            <a href="https://www.linkedin.com/in/dr-sanjay-thakrar-717689b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-icon ms-2 text-" style="font-size: 25px;">
+                                <i class="fab fa-linkedin" style="color: #0077B5;"></i>
+                            </a>
+                            <!-- <a href="https://www.instagram.com/your-instagram-profile" target="_blank" class="instagram-icon ms-2" style="font-size: 25px;">
+                                <i class="fab fa-instagram" style="color: #e1306c;"></i>
+                            </a>  -->
+                    </div>
+                    
+                    <!-- <h5 class=" pb-2 cotitle ">Founder & Chairman </h5> -->
                     <p class="member-inner-content  ">
                         <p class="ms-3 me-3 para text-justify">Dr. Sanjay Thakrar is the Founder of Euro Exim Bank,a challenger bank in Trade Finance, Headquartered in St. Lucia, with a Representative Office in London</p>
                         <p class="ms-3 me-3 para text-justify">The Bank has grown its network of International agents and partners to span over 180 Countries, supported by an independent back-office service provider in India, providing sales onboarding, local compliance, legal and IT support.</p>
@@ -171,12 +183,12 @@
             </div>
 
             <div class="footerIcon">
-                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true">
+                <a href="https://www.linkedin.com/company/eeb-engineering-design-and-consultancy-services/mycompany/?viewAsMember=true" target="_blank">
                     <div class="twitter">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt">
+                <a href="https://www.instagram.com/eebengineering?igsh=MzZ4YmJ4MjAxcHlt" target="_blank">
                     <div class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
